--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the aortic valve area<br> 
+    What is the aortic valve area calculator?<br>
+    The aortic valve area calculator is a tool that calculates the arotic valve area.<br>
+    How to calculate aortic valve area?<br>
+    To calculate aortic valve area you should use the following formula:<br>
+    aortic valve area = (LVOT ^ 2 * 0.7854 * VTI1) / VTI2<br>
+    Why use aortic valve area calculator?<br>
+    The aortic valve area calculator is used in order to determine the severity of aortic stenosis.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
